--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,33 +6,98 @@
 }
 body {
     display: flex;
-    /* flex-direction: row;
-    flex-flow: wrap; */
     flex-flow: row wrap;
-    justify-content: space-around; /* flex-start a esquerda não é necessariamente a "esquerda", isso é o "inicio" mesmo, pois se ele for o column o flex start será o topo. Ele se relaciona com a propriedade que está sendo aplicada */
+    justify-content: space-between; /* flex-start a esquerda não é necessariamente a "esquerda", isso é o "inicio" mesmo, pois se ele for o column o flex start será o topo. Ele se relaciona com a propriedade que está sendo aplicada */
+    align-items: stretch;
     height: 100vh;
-    align-items: flex-start;
-    height: 300vh;
+    
      
 }
 header,footer{
     border: 1px dashed green;
     background-color: rgba(0,255,0,0.3);
-    width: 10%;
+    flex: 1 0 100%;
     height: 10vh;
+    text-align: center;
    
+}
+
+footer ul {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+ul {
+    list-style: none;
+}
+
+footer ul li {
+    flex: 0 0 auto;
 }
     
 aside {
     border: 1px dashed red;
     background-color: rgba(255,0,0,0.3);
-    width: 10%;
-    height: 10vh;
+    flex: 1 1 20%;
+}
+aside ul {
+    display: flex;
+    flex-flow: column-reverse nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    margin: 20px;
+}
+
+aside ul li {
+    flex: 1 1 0;
+}
+
+#tel {
+    order: 2;
 }
 
 main {
     border: 1px dashed blue;
     background-color: rgba(0,0,255,0.3);
-    width: 10%;
-    height: 10vh;
+    flex: 1 1 80%;
+    height: 80vh;
+        
+}
+
+main section {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+main section h2 {
+    flex: 1 0 100%;
+    text-align: center;
+}
+
+main section article {
+    flex: 1 1 50%;
+    display: flex;
+    flex-flow: column wrap;
+    height: 150px;
+    border: 1px solid blue;
+            
+}
+main section article h3 {
+    flex: 1 1 50%;
+}
+
+main section article img {
+    width: 320px;
+    height:150px;
+    order: -1;
+    flex: 0 1 0;
+
+}
+main section article: :nth-child(odd) img {
+    order: 2;
 }
